fix(bignumber): custom tooltip icon position

--- a/packages/ibm-products-web-components/src/components/big-number/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/big-number/story-styles.scss
@@ -36,3 +36,14 @@ $story-prefix: #{$prefix}--big-number-stories;
     @include type-style('body-compact-01');
   }
 }
+
+.#{$story-prefix}__label-with-tooltip {
+  display: inline-flex;
+  align-items: center;
+  gap: spacing.$spacing-03;
+}
+
+.#{$story-prefix}__tooltip {
+  display: inline-flex;
+  align-items: center;
+}
